--- a/Dockerfile-tools
+++ b/Dockerfile-tools
@@ -1,4 +1,4 @@
-FROM cytopia/ansible:latest-tools
+FROM cytopia/ansible:latest-tools as build
 
 # Metadata params
 ARG BUILD_DATE
@@ -6,17 +6,16 @@ ARG VCS_REF
 ARG TIMEZONE
 ARG LANG="C.UTF-8"
 
-# Metadata
 LABEL maintainer="Asapdotid <asapdotid@gmail.com>" \
     org.label-schema.url="https://gitlab.com/asap-labs/docker-ansible/-/blob/main/README.md" \
     org.label-schema.build-date=${BUILD_DATE} \
     org.label-schema.vcs-url="https://gitlab.com/asap-labs/docker-ansible.git" \
     org.label-schema.vcs-ref=${VCS_REF} \
-    org.label-schema.docker.dockerfile="/Dockerfile" \
+    org.label-schema.docker.dockerfile="/${DOCKER_FILE}" \
     org.label-schema.description="Ansible docker image" \
-    org.label-schema.schema-version="1.0"
+    org.label-schema.schema-version="tools"
 
-# Define uid/gid and user/group names
+# # Define uid/gid and user/group names
 ENV \
 	MY_USER=ansible \
 	MY_GROUP=ansible \
@@ -41,9 +40,13 @@ RUN apk add tzdata \
 RUN rm -rf /var/cache/apk/* \
     && rm -rf /tmp/*
 
+WORKDIR /data
+
 COPY requirements.yml ./
 RUN ansible-galaxy install -r requirements.yml
 
-WORKDIR /data
+# FROM cytopia/ansible:latest-tools
+
+# COPY --from=build /data /data
 
 CMD [ "ansible", "--version" ]
