--- a/hooks/.env
+++ b/hooks/.env
@@ -1,3 +1,5 @@
 DOCKER_REPO=asapdotid
-IMAGE_NAME=ansible-tools
-IMAGE_VERSION=1.0.0
+DOCKER_FILE=Dockerfile-tools # ansible function
+IMAGE_NAME=ansible
+IMAGE_VERSION=tools # ansible function
+TIMEZONE=Asia/Jakarta
