--- a/hooks/build
+++ b/hooks/build
@@ -7,12 +7,13 @@ source "$(dirname "$0")/.env"
 set +o allexport
 
 # Check first if docker image is exist
-OLD="$(docker ps --all --quiet --filter name=${DOCKER_REPO}/${IMAGE_NAME}:${IMAGE_VERSION})"
+OLD="$(docker ps --all --quiet --filter=name=$DOCKER_REPO/$IMAGE_NAME:$IMAGE_VERSION)"
 if [ -n "$OLD" ]; then
   exec docker stop $OLD && docker rm $OLD
 fi
-# Run Docker
-exec docker build \
-    --build-arg VCS_REF=`git rev-parse --short HEAD` \
-    --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` \
-    -t $DOCKER_REPO/$IMAGE_NAME:$IMAGE_VERSION .
+
+# Run Build Docker Image
+exec docker build --build-arg VCS_REF=`git rev-parse --short HEAD` \
+             --build-arg BUILD_DATE=`date -u +”%Y-%m-%dT%H:%M:%SZ”` \
+             -f $DOCKER_FILE \
+             -t $DOCKER_REPO/$IMAGE_NAME:$IMAGE_VERSION .
