👌 IMPROVE: add yq package for yaml replace string

--- a/Dockerfile-tools
+++ b/Dockerfile-tools
@@ -31,7 +31,8 @@ RUN apk --update --no-cache add \
     gawk \
     curl \
     perl-mime-base64 \
-    sshpass
+    sshpass \
+    yq
 
 ENV TZ=${TIMEZONE}
 RUN apk add tzdata \
