--- a/Dockerfile-tools
+++ b/Dockerfile-tools
@@ -1,50 +1,58 @@
-FROM cytopia/ansible:latest-tools as build
+FROM alpine:3.15
 
 # Metadata params
 ARG BUILD_DATE
 ARG VCS_REF
-ARG TIMEZONE
-ARG LANG="C.UTF-8"
+ARG ANSIBLE_VERSION_ARG
+ENV ANSIBLE_VERSION ${ANSIBLE_VERSION_ARG}
 
+# Metadata
 LABEL maintainer="Asapdotid <asapdotid@gmail.com>" \
     org.label-schema.url="https://gitlab.com/asap-labs/docker-ansible/-/blob/main/README.md" \
     org.label-schema.build-date=${BUILD_DATE} \
+    org.label-schema.version=${ANSIBLE_VERSION} \
     org.label-schema.vcs-url="https://gitlab.com/asap-labs/docker-ansible.git" \
     org.label-schema.vcs-ref=${VCS_REF} \
-    org.label-schema.docker.dockerfile="/${DOCKER_FILE}" \
-    org.label-schema.description="Ansible docker image" \
-    org.label-schema.schema-version="tools"
-
-# # Define uid/gid and user/group names
-ENV \
-	MY_USER=ansible \
-	MY_GROUP=ansible \
-	MY_UID=1000 \
-	MY_GID=1000
+    org.label-schema.docker.dockerfile="/Dockerfile" \
+    org.label-schema.description="Ansible tools docker image" \
+    org.label-schema.schema-version="1.0"
 
 RUN apk --update --no-cache add \
     ca-certificates \
+    bash \
+    git \
     openssh-client \
     openssl \
+    python3\
+    py3-pip \
     rsync \
+    sshpass \
+    perl-mime-base64 \
     sed \
     gawk \
-    curl \
-    perl-mime-base64 \
-    sshpass
+    curl
 
-ENV TZ=${TIMEZONE}
-RUN apk add tzdata \
-    && ln -snf /usr/share/zoneinfo/$TZ /etc/localtime \
-    && echo '$TZ' > /etc/timezone \
-    && apk del tzdata
+RUN apk --update add --virtual .build-deps \
+    python3-dev \
+    libffi-dev \
+    openssl-dev \
+    build-base
 
-RUN rm -rf /var/cache/apk/* \
-    && rm -rf /tmp/*
+RUN python3 -m venv /opt/venv
+# Make sure we use the virtualenv:
+ENV PATH="/opt/venv/bin:$PATH"
 
-RUN mkdir -p /etc/ansible \
-    && echo 'localhost' > /etc/ansible/hosts \
-    && echo -e """\
+RUN pip3 install --upgrade pip wheel && \
+    pip3 install --upgrade cryptography cffi && \
+    pip3 install ansible-core>=${ANSIBLE_VERSION} ansible && \
+    pip3 install mitogen ansible-lint jmespath && \
+    apk del .build-deps && \
+    rm -rf /var/cache/apk/* && \
+    rm -rf /root/.cache/pip
+
+RUN mkdir -p /etc/ansible && \
+    echo 'localhost' > /etc/ansible/hosts && \
+    echo -e """\
 \n\
 Host *\n\
     StrictHostKeyChecking no\n\
@@ -55,10 +63,11 @@ Host *\n\
 COPY ./requirements.yml ./
 RUN ansible-galaxy install -r requirements.yml
 
-COPY ./docker-entrypoint.sh /docker-entrypoint.sh
+COPY ./docker-entrypoint.sh /
 RUN ["chmod", "+x", "/docker-entrypoint.sh"]
 
-WORKDIR /data
+WORKDIR /ansible
 ENTRYPOINT ["/docker-entrypoint.sh"]
 
-CMD ["ansible", "--version"]
+# default command: display Ansible version
+CMD [ "ansible-playbook", "--version" ]
