👌 IMPROVE: update ansible and config

--- a/hooks/.env
+++ b/hooks/.env
@@ -1,6 +1,6 @@
-ANSIBLE_VERSION_ARG=2.12.2
+ANSIBLE_VERSION=6.2.0
+TIMEZONE=Asia/Jakarta
+DOCKER_FILE=Dockerfile # ansible function
 DOCKER_REPO=asapdotid
-DOCKER_FILE=Dockerfile-tools # ansible function
 IMAGE_NAME=ansible
 IMAGE_VERSION=tools # ansible function
-TIMEZONE=Asia/Jakarta
