--- a/hooks/build
+++ b/hooks/build
@@ -1,10 +1,12 @@
 #!/bin/sh
 set -o nounset -o errexit
 
-# Load all variables .env
-set -o allexport
-source "$(dirname "$0")/.env"
-set +o allexport
+ALPINE_VERSION=3.17
+ANSIBLE_VERSION=7.1.0
+DOCKER_FILE=Dockerfile
+DOCKER_REPO=asapdotid
+IMAGE_NAME=ansible
+IMAGE_VERSION=tools
 
 # Check first if docker image is exist
 OLD="$(docker ps --all --quiet --filter=name=$DOCKER_REPO/$IMAGE_NAME:$IMAGE_VERSION)"
@@ -13,7 +15,8 @@ if [ -n "$OLD" ]; then
 fi
 
 # Run Build Docker Image
-exec docker build --build-arg VCS_REF=$(git rev-parse --short HEAD) \
+exec docker build \
+    --build-arg VCS_REF=$(git rev-parse --short HEAD) \
     --build-arg BUILD_DATE=$(date -u +”%Y-%m-%dT%H:%M:%SZ”) \
     --build-arg ALPINE_VERSION=$ALPINE_VERSION \
     --build-arg ANSIBLE_VERSION=$ANSIBLE_VERSION \
