--- a/.github/workflows/ansible-docker-build.yaml
+++ b/.github/workflows/ansible-docker-build.yaml
@@ -18,55 +18,56 @@ on:
 
 jobs:
   call-docker-build:
-    name: Call Docker Build Ansible Tools
-
-    uses: bretfisher/docker-build-workflow/.github/workflows/reusable-docker-build.yaml@main
-
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write # needed to push docker image to ghcr.io
       pull-requests: write # needed to create and update comments in PRs
 
-    secrets:
-      # Only needed if with:dockerhub-enable is true below
-      # https://hub.docker.com/settings/security
-      dockerhub-username: ${{ github.actor }}
-      dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+      - name: Call Docker Build Ansible Tools
+        uses: bretfisher/docker-build-workflow/.github/workflows/reusable-docker-build.yaml@main
+        secrets:
+          # Only needed if with:dockerhub-enable is true below
+          # https://hub.docker.com/settings/security
+          dockerhub-username: ${{ github.actor }}
+          dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
+        with:
+          ### REQUIRED
+          ### ENABLE ONE OR BOTH REGISTRIES
+          ### tell docker where to push.
+          ### NOTE if Docker Hub is set to true, you must set secrets above and also add account/repo/tags below
+          dockerhub-enable: true
+          ghcr-enable: false
 
-    with:
-      ### REQUIRED
-      ### ENABLE ONE OR BOTH REGISTRIES
-      ### tell docker where to push.
-      ### NOTE if Docker Hub is set to true, you must set secrets above and also add account/repo/tags below
-      dockerhub-enable: true
-      ghcr-enable: false
+          ### A list of the account/repo names for docker build. List should match what's enabled above
+          ### defaults to:
+          image-names: |
+            asapdotid/ansible
 
-      ### A list of the account/repo names for docker build. List should match what's enabled above
-      ### defaults to:
-      image-names: |
-        asapdotid/ansible
+          ### set rules for tagging images, based on special action syntax:
+          ### https://github.com/docker/metadata-action#tags-input
+          ### defaults to:
+          tag-rules: |
+            type=raw,value=tools,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
 
-      ### set rules for tagging images, based on special action syntax:
-      ### https://github.com/docker/metadata-action#tags-input
-      ### defaults to:
-      tag-rules: |
-        type=raw,value=tools,enable=${{ endsWith(github.ref, github.event.repository.default_branch) }}
+          ### path to where docker should copy files into image
+          ### defaults to root of repository (.)
+          context: .
 
-      ### path to where docker should copy files into image
-      ### defaults to root of repository (.)
-      context: .
+          ### Dockerfile alternate name. Default is Dockerfile (relative to context path)
+          file: src/Dockerfile
 
-      ### Dockerfile alternate name. Default is Dockerfile (relative to context path)
-      file: src/Dockerfile
+          ### build stage to target, defaults to empty, which builds to last stage in Dockerfile
+          # target:
 
-      ### build stage to target, defaults to empty, which builds to last stage in Dockerfile
-      # target:
+          ### platforms to build for
+          ### defaults to linux/amd64
+          ### other options: linux/amd64,linux/arm64,linux/arm/v7
+          # platforms: linux/amd64,linux/arm64
 
-      ### platforms to build for
-      ### defaults to linux/amd64
-      ### other options: linux/amd64,linux/arm64,linux/arm/v7
-      # platforms: linux/amd64,linux/arm64
-
-      ### Create a PR comment with image tags and labels
-      ### defaults to true
-      # comment-enable: false
+          ### Create a PR comment with image tags and labels
+          ### defaults to true
+          # comment-enable: false
