⚡️ IMPROVE: update config ssh and tool

--- a/.make/.env.example
+++ b/.make/.env.example
@@ -3,10 +3,8 @@ DOCKER_REGISTRY=docker.io
 # Docker namespace
 DOCKER_NAMESPACE=asapdotid
 # Docker image name
-DOCKER_IMAGE_NAME=ansible
+DOCKER_IMAGE_NAME=alpine
 # Docker image tag
-DOCKER_IMAGE_TAG=tools
+DOCKER_IMAGE_TAG=ssh
 # Alpinelinux version
-ALPINE_VERSION=3.15
-# Ansible version
-ANSIBLE_VERSION=8.0.0
+ALPINE_VERSION=3.18
